--- a/css/custom.css
+++ b/css/custom.css
@@ -699,6 +699,46 @@ body{
     color: #000;
   }
 
+/* project details */
+.project-info-box {
+    margin: 15px 0;
+    background-color: #fff;
+    padding: 30px 40px;
+    border-radius: 5px;
+  }
+  
+  .project-info-box p {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #d5dadb;
+  }
+  
+  .project-info-box p:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+  .project-details-img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+      -webkit-backface-visibility: hidden;
+  }
+
+  .service-photo-gallery .photos {
+    padding-bottom:20px;
+  }
+  
+  .service-photo-gallery .item {
+    padding-bottom:30px;
+  }
+
+  .service-details-item-img {
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    border: 2px dashed;
+  }
   
 @media only screen and (max-width: 990px){
     .our-team{ margin-bottom: 30px; }
