--- a/css/custom.css
+++ b/css/custom.css
@@ -651,7 +651,7 @@ body{
     display: inline-block;
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 300px;
     border-radius: 30px;
     overflow:hidden;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
@@ -673,22 +673,28 @@ body{
     left: -5px;
     height: 40%;
     width: 108%;
-    transform: skew(19deg, -8deg);
+    transform: skew(19deg, -7deg);
   }
   
   .service-description {
     position: absolute;
     color: #fff;
-    font-weight: 900;
-    left: 15px;
-    bottom: 7%;
+    font-weight: 500;
+    left: 20px;
+    bottom: 5%;
+    padding-right: 20px;
+  }
+  
+  .service-description p{
+    font-size: 16px;
+    line-height: 1.3;
   }
   
   .service-btn {
     position: absolute;
     right: 30px;
-    bottom: 25%;
-    padding: 5px 15px;
+    bottom: 24%;
+    padding: 3px 15px;
     border: 1px solid #fff;
     background: #fff;
     border-radius: 20px;
